# platformer-game

./: CMakeLists.txt  main.cpp  map.txt
src/: Platform.cpp  Platform.h
